--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -85,6 +85,25 @@
         .status-delivered {
             color: green;
         }
+        #notifications {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            width: 300px;
+            z-index: 1000;
+        }
+        .notification {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 4px;
+            opacity: 0.9;
+            transition: opacity 0.5s;
+        }
+        .notification.fade-out {
+            opacity: 0;
+        }
     </style>
 </head>
 <body>
@@ -106,6 +125,8 @@
         </div>
         <div id="map"></div>
     </div>
+
+    <div id="notifications"></div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
@@ -253,6 +274,7 @@
             renderOrderList();
             updateMap();
             hideNewOrderForm();
+            showNotification(`Novo pedido criado para ${clientName}`);
         }
 
         function editOrder(orderId) {
@@ -303,11 +325,13 @@
 
         function assignOrderToMotoboy(orderId, motoboyId) {
             const order = orders.find(o => o.id === orderId);
-            if (order) {
+            const motoboy = motoboys.find(m => m.id === motoboyId);
+            if (order && motoboy) {
                 order.status = 'assigned';
                 order.motoboyId = motoboyId;
                 renderOrderList();
                 updateMap();
+                showNotification(`Pedido #${orderId} atribuído a ${motoboy.name}`);
             }
         }
 
@@ -317,6 +341,7 @@
                 order.status = 'delivered';
                 renderOrderList();
                 updateMap();
+                showNotification(`Pedido #${orderId} entregue com sucesso`);
             }
         }
 
@@ -372,18 +397,8 @@
             });
         }
 
-        document.getElementById('newOrderBtn').addEventListener('click', showNewOrderForm);
-        document.getElementById('cancelOrderBtn').addEventListener('click', hideNewOrderForm);
-        document.getElementById('orderForm').addEventListener('submit', saveOrder);
-
-        // Inicializar a lista de pedidos, motoboys e o mapa
-        initMap();
-        renderOrderList();
-        renderMotoboyList();
-        updateMap();
-
-        // Centralizar o mapa na Rua Serra do Mar, 1216, Potengi
-        geocodeAddress({ street: "Rua Serra do Mar", number: "1216", neighborhood: "Potengi" });
-    </script>
-</body>
-</html>
+        function showNotification(message) {
+            const notifications = document.getElementById('notifications');
+            const notification = document.createElement('div');
+            notification.className = 'notification';
+            notification.text
