--- a/public/enviarpedidos.html
+++ b/public/enviarpedidos.html
@@ -106,12 +106,14 @@
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyDRcj2LVVHsFXgGT6zr1YCxeAqrOIPmgUU",
-            authDomain: "cabana-acai-delivery.firebaseapp.com",
-            projectId: "cabana-acai-delivery",
-            storageBucket: "cabana-acai-delivery.appspot.com",
-            messagingSenderId: "111130312815",
-            appId: "1:111130312815:web:b0f28fee3abb6bc6cdb564"
+  apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+  authDomain: "cabana-8d55e.firebaseapp.com",
+  databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+  projectId: "cabana-8d55e",
+  storageBucket: "cabana-8d55e.appspot.com",
+  messagingSenderId: "706144237954",
+  appId: "1:706144237954:web:345c10370972486afc779b",
+  measurementId: "G-96Y337GYT8"
         };
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
